Shifted movie strip when rendering <100% resolution for strip with complex transform #33295

Closed
opened 2012-11-25 00:39:12 +01:00 by Mayeul Kauffmann · 7 comments

%%%See the first screenshot:
I have 4 strips to be rendered in four parts of the screen. The problem is with the lower left one (with the two guys, one with a white shirt and another with a green T-shirt [me]). On the VSE preview (top-middle of the screenshot, it is perfect. It renders perfectly as well when I render at 100% resolution.
On the right of the screenshot (within blender), rendered at 50%, only part of this image is visible as it is shifted.
On the top-left of the screenshot (the "URL - KMPlayer" window), it is rendered at 25% and completely shifted (out of the screen maybe).
The screenshot shows that the transform is quite complex as I needed a well-positioned crop (hence the offset), then scale, then move the result (hence the position values). And you'll notice I first flipped on x.
However, on the underliying strip ("Robert guide 2"), I used no offset, crop, nor flip (you cannot see this in the screenshot).

On the 3 other parts of the scene, I used only some of those techniques to crop/shift/move the small strips. So this is really the combination of all of those that create the problem.

On the second screenshot: problem is the reverse: the shift is in the preview (top left) when rendering engin is set to render at less than 100%, but there is no shift on the render output (bottom right), whaterver the resolution.

The bug in the second screenshot is a small annoyance, workaround being to set 100% resolution when you position the bits. The bug in the first screenshot prevents correct rendering at less than 100% so is pretty much annoying.
1st example is on movie strip, 2nd on image sequence.

Using plain Blender 2.64.0 r51232 (dowloaded from Blender website) on Kubuntu 11.04, 64 bits.

Mayeul

PS: the blender file itself is 30MB (without any of the images); that would require a lot of cleanup to reduce it to something uploadable, I may try if nobody can reproduce.

%%%

%%%See the first screenshot: I have 4 strips to be rendered in four parts of the screen. The problem is with the lower left one (with the two guys, one with a white shirt and another with a green T-shirt [me]). On the VSE preview (top-middle of the screenshot, it is perfect. It renders perfectly as well when I render at 100% resolution. On the right of the screenshot (within blender), rendered at 50%, only part of this image is visible as it is shifted. On the top-left of the screenshot (the "URL - KMPlayer" window), it is rendered at 25% and completely shifted (out of the screen maybe). The screenshot shows that the transform is quite complex as I needed a well-positioned crop (hence the offset), then scale, then move the result (hence the position values). And you'll notice I first flipped on x. However, on the underliying strip ("Robert guide 2"), I used no offset, crop, nor flip (you cannot see this in the screenshot). On the 3 other parts of the scene, I used only some of those techniques to crop/shift/move the small strips. So this is really the combination of all of those that create the problem. On the second screenshot: problem is the reverse: the shift is in the preview (top left) when rendering engin is set to render at less than 100%, but there is no shift on the render output (bottom right), whaterver the resolution. The bug in the second screenshot is a small annoyance, workaround being to set 100% resolution when you position the bits. The bug in the first screenshot prevents correct rendering at less than 100% so is pretty much annoying. 1st example is on movie strip, 2nd on image sequence. Using plain Blender 2.64.0 r51232 (dowloaded from Blender website) on Kubuntu 11.04, 64 bits. Mayeul PS: the blender file itself is 30MB (without any of the images); that would require a lot of cleanup to reduce it to something uploadable, I may try if nobody can reproduce. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%
Edit:
see attached
bug_blender_shift3.png
On a offseted-croped colour strip (the one you do a fade out with if you choose it black), the type 1 bug is there too.%%%

%%% Edit: see attached bug_blender_shift3.png On a offseted-croped colour strip (the one you do a fade out with if you choose it black), the type 1 bug is there too.%%%

%%%attached file 3%%%

%%%attached file 3%%%

%%%Please always attach sample .blend file which demonstrates the issue. It always saves a lot of time trying to understand your particular setup. You could replace strips with image strips in a new file.

Also please test testbuild1 from http://download.blender.org/release/Blender2.65/ where this issue could have been already fixed.%%%

%%%Please always attach sample .blend file which demonstrates the issue. It always saves a lot of time trying to understand your particular setup. You could replace strips with image strips in a new file. Also please test testbuild1 from http://download.blender.org/release/Blender2.65/ where this issue could have been already fixed.%%%

%%%Thanks for the link.
I just tried with
blender-2.65-testbuild1-linux-glibc27-x86_64.tar.bz2 2012-Nov-23 11:30:48 59.6M
and the bug is still there.
I created a very simple project, which shows a variant of the bug (in between my two examples).
To reproduce: open blender file, you'll see a yellow box (rectangle strip) on top of gray box. Change the resolution (in%), the yellow box moves in the VSE preview. The rendered output changes at well.
Mayeul%%%

%%%Thanks for the link. I just tried with blender-2.65-testbuild1-linux-glibc27-x86_64.tar.bz2 2012-Nov-23 11:30:48 59.6M and the bug is still there. I created a very simple project, which shows a variant of the bug (in between my two examples). To reproduce: open blender file, you'll see a yellow box (rectangle strip) on top of gray box. Change the resolution (in%), the yellow box moves in the VSE preview. The rendered output changes at well. Mayeul%%%

%%%Should be fixed in svn rev52629. Thanks for the report, closing.%%%

%%%Should be fixed in svn rev52629. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33295
No description provided.