Fix #33295: Shifted movie strip when rendering <100% resolution for strip with complex transform

That was kind of a regression since fix for #32091: Crop and offset coordinates changes proxy
render settings on image strips, which is now fixed in other way.

Namely Offset/Crop values are filling in 100% scene resolution values, but getting scaled to
proxy / scene percentage values.